# PathTracer

./: .gitignore  README.md  run.sh
.cache/clangd/index/: AABB.h.B831E8D58BCBAF61.idx  BVH.h.F58DDFA3E46D0AFF.idx  camera.h.FDF6D7074BCBEBAF.idx  main.cpp.177FFDEE804378E0.idx  ray_triangle.h.3CEE08749178B5B2.idx  scene.h.2A571FC41F418DAE.idx  sceneloader.cpp.E2B94A4B8C00272F.idx  sceneloader.h.6ADD4976B0EC3323.idx  tiny_obj_loader.h.370971D28DA712AC.idx  vec.h.A691D2D1FC6FF33C.idx
src/: AABB.h  CMakeLists.txt  main.cpp
src/scene/: sceneloader.h
tracer/: CMakeCache.txt  Makefile  cmake_install.cmake
tracer/.cmake/api/v1/reply/: cache-v2-55ed6b87c32d2ef303a6.json  cmakeFiles-v1-f7e1c993fd277127f5de.json  codemodel-v2-5a0bfbecd64989d2628d.json  index-2022-09-15T23-38-14-0835.json  target-ESCViewer2021-Release-d1adfeda135de59d2f1b.json
tracer/src/: AABB.h  BVH.cpp  BVH.h  Makefile  SafeQueue.h  cmake_install.cmake  main.cpp
